Fixed type safety warnings